--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -775,9 +775,9 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "epochs = 5\n",
+    "epochs = 1500\n",
     "# Batch Size\n",
-    "batch_size = 120\n",
+    "batch_size = 500\n",
     "# RNN Size\n",
     "rnn_size = 300\n",
     "# Number of Layers\n",
@@ -789,7 +789,7 @@
     "learning_rate = .0004\n",
     "# Dropout Keep Probability\n",
     "keep_probability = .5\n",
-    "display_step = 10\n",
+    "display_step = 100\n",
     "\n"
    ]
   },
@@ -927,7 +927,8 @@
      "output_type": "stream",
      "text": [
       "Epoch   0 Batch   10/1148 - Train Accuracy: 0.2888, Validation Accuracy: 0.3462, Loss: 4.1324\n",
-      "Epoch   0 Batch   20/1148 - Train Accuracy: 0.3283, Validation Accuracy: 0.3830, Loss: 3.4669\n"
+      "Epoch   0 Batch   20/1148 - Train Accuracy: 0.3283, Validation Accuracy: 0.3830, Loss: 3.4669\n",
+      "Epoch   0 Batch   30/1148 - Train Accuracy: 0.3771, Validation Accuracy: 0.4303, Loss: 3.1606\n"
      ]
     }
    ],
