--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -14,11 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -42,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,10 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -192,10 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -218,22 +221,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.1.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E:\\tom\\Anaconda3\\envs\\tf-1-1\\lib\\site-packages\\ipykernel_launcher.py:15: UserWarning: No GPU found. Please use a GPU to train your neural network.\n",
-      "  from ipykernel import kernelapp as app\n"
+      "TensorFlow Version: 1.4.0\n",
+      "Default GPU Device: /device:GPU:0\n"
      ]
     }
    ],
@@ -287,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -600,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -768,16 +764,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "epochs = 1500\n",
+    "epochs = 65\n",
     "# Batch Size\n",
-    "batch_size = 500\n",
+    "batch_size = 750\n",
     "# RNN Size\n",
     "rnn_size = 300\n",
     "# Number of Layers\n",
@@ -789,7 +783,7 @@
     "learning_rate = .0004\n",
     "# Dropout Keep Probability\n",
     "keep_probability = .5\n",
-    "display_step = 100\n",
+    "display_step = 150\n",
     "\n"
    ]
   },
@@ -803,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,10 +861,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -917,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -926,9 +918,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch   10/1148 - Train Accuracy: 0.2888, Validation Accuracy: 0.3462, Loss: 4.1324\n",
-      "Epoch   0 Batch   20/1148 - Train Accuracy: 0.3283, Validation Accuracy: 0.3830, Loss: 3.4669\n",
-      "Epoch   0 Batch   30/1148 - Train Accuracy: 0.3771, Validation Accuracy: 0.4303, Loss: 3.1606\n"
+      "Epoch   0 Batch  150/183 - Train Accuracy: 0.5072, Validation Accuracy: 0.5165, Loss: 1.5997\n",
+      "Epoch   1 Batch  150/183 - Train Accuracy: 0.5754, Validation Accuracy: 0.5708, Loss: 0.9649\n",
+      "Epoch   2 Batch  150/183 - Train Accuracy: 0.6884, Validation Accuracy: 0.6801, Loss: 0.6355\n",
+      "Epoch   3 Batch  150/183 - Train Accuracy: 0.7682, Validation Accuracy: 0.7695, Loss: 0.4284\n",
+      "Epoch   4 Batch  150/183 - Train Accuracy: 0.8358, Validation Accuracy: 0.8456, Loss: 0.2803\n",
+      "Epoch   5 Batch  150/183 - Train Accuracy: 0.8761, Validation Accuracy: 0.8861, Loss: 0.1864\n",
+      "Epoch   6 Batch  150/183 - Train Accuracy: 0.8990, Validation Accuracy: 0.9164, Loss: 0.1402\n",
+      "Epoch   7 Batch  150/183 - Train Accuracy: 0.9125, Validation Accuracy: 0.9236, Loss: 0.1083\n",
+      "Epoch   8 Batch  150/183 - Train Accuracy: 0.9181, Validation Accuracy: 0.9339, Loss: 0.0949\n",
+      "Epoch   9 Batch  150/183 - Train Accuracy: 0.9255, Validation Accuracy: 0.9397, Loss: 0.0779\n",
+      "Epoch  10 Batch  150/183 - Train Accuracy: 0.9358, Validation Accuracy: 0.9462, Loss: 0.0707\n",
+      "Epoch  11 Batch  150/183 - Train Accuracy: 0.9355, Validation Accuracy: 0.9438, Loss: 0.0627\n",
+      "Epoch  12 Batch  150/183 - Train Accuracy: 0.9398, Validation Accuracy: 0.9523, Loss: 0.0573\n",
+      "Epoch  13 Batch  150/183 - Train Accuracy: 0.9460, Validation Accuracy: 0.9536, Loss: 0.0508\n",
+      "Epoch  14 Batch  150/183 - Train Accuracy: 0.9454, Validation Accuracy: 0.9552, Loss: 0.0474\n",
+      "Epoch  15 Batch  150/183 - Train Accuracy: 0.9507, Validation Accuracy: 0.9604, Loss: 0.0452\n",
+      "Epoch  16 Batch  150/183 - Train Accuracy: 0.9510, Validation Accuracy: 0.9595, Loss: 0.0397\n",
+      "Epoch  17 Batch  150/183 - Train Accuracy: 0.9501, Validation Accuracy: 0.9596, Loss: 0.0392\n",
+      "Epoch  18 Batch  150/183 - Train Accuracy: 0.9563, Validation Accuracy: 0.9613, Loss: 0.0335\n",
+      "Epoch  19 Batch  150/183 - Train Accuracy: 0.9551, Validation Accuracy: 0.9621, Loss: 0.0351\n",
+      "Epoch  20 Batch  150/183 - Train Accuracy: 0.9598, Validation Accuracy: 0.9738, Loss: 0.0310\n",
+      "Epoch  21 Batch  150/183 - Train Accuracy: 0.9630, Validation Accuracy: 0.9675, Loss: 0.0307\n",
+      "Epoch  22 Batch  150/183 - Train Accuracy: 0.9621, Validation Accuracy: 0.9679, Loss: 0.0289\n",
+      "Epoch  23 Batch  150/183 - Train Accuracy: 0.9645, Validation Accuracy: 0.9690, Loss: 0.0287\n",
+      "Epoch  24 Batch  150/183 - Train Accuracy: 0.9645, Validation Accuracy: 0.9721, Loss: 0.0283\n",
+      "Epoch  25 Batch  150/183 - Train Accuracy: 0.9670, Validation Accuracy: 0.9696, Loss: 0.0247\n",
+      "Epoch  26 Batch  150/183 - Train Accuracy: 0.9702, Validation Accuracy: 0.9693, Loss: 0.0246\n",
+      "Epoch  27 Batch  150/183 - Train Accuracy: 0.9708, Validation Accuracy: 0.9740, Loss: 0.0251\n",
+      "Epoch  28 Batch  150/183 - Train Accuracy: 0.9672, Validation Accuracy: 0.9770, Loss: 0.0237\n",
+      "Epoch  29 Batch  150/183 - Train Accuracy: 0.9701, Validation Accuracy: 0.9736, Loss: 0.0201\n",
+      "Epoch  30 Batch  150/183 - Train Accuracy: 0.9730, Validation Accuracy: 0.9765, Loss: 0.0190\n",
+      "Epoch  31 Batch  150/183 - Train Accuracy: 0.9730, Validation Accuracy: 0.9760, Loss: 0.0207\n",
+      "Epoch  32 Batch  150/183 - Train Accuracy: 0.9750, Validation Accuracy: 0.9712, Loss: 0.0174\n",
+      "Epoch  33 Batch  150/183 - Train Accuracy: 0.9763, Validation Accuracy: 0.9778, Loss: 0.0186\n",
+      "Epoch  34 Batch  150/183 - Train Accuracy: 0.9779, Validation Accuracy: 0.9780, Loss: 0.0174\n",
+      "Epoch  35 Batch  150/183 - Train Accuracy: 0.9765, Validation Accuracy: 0.9755, Loss: 0.0186\n",
+      "Epoch  36 Batch  150/183 - Train Accuracy: 0.9771, Validation Accuracy: 0.9827, Loss: 0.0183\n",
+      "Epoch  37 Batch  150/183 - Train Accuracy: 0.9818, Validation Accuracy: 0.9785, Loss: 0.0176\n",
+      "Epoch  38 Batch  150/183 - Train Accuracy: 0.9821, Validation Accuracy: 0.9799, Loss: 0.0157\n",
+      "Epoch  39 Batch  150/183 - Train Accuracy: 0.9804, Validation Accuracy: 0.9775, Loss: 0.0153\n",
+      "Epoch  40 Batch  150/183 - Train Accuracy: 0.9864, Validation Accuracy: 0.9813, Loss: 0.0150\n",
+      "Epoch  41 Batch  150/183 - Train Accuracy: 0.9788, Validation Accuracy: 0.9795, Loss: 0.0158\n",
+      "Epoch  42 Batch  150/183 - Train Accuracy: 0.9833, Validation Accuracy: 0.9853, Loss: 0.0139\n",
+      "Epoch  43 Batch  150/183 - Train Accuracy: 0.9858, Validation Accuracy: 0.9823, Loss: 0.0131\n",
+      "Epoch  44 Batch  150/183 - Train Accuracy: 0.9830, Validation Accuracy: 0.9805, Loss: 0.0124\n",
+      "Epoch  45 Batch  150/183 - Train Accuracy: 0.9858, Validation Accuracy: 0.9792, Loss: 0.0113\n",
+      "Epoch  46 Batch  150/183 - Train Accuracy: 0.9843, Validation Accuracy: 0.9798, Loss: 0.0132\n",
+      "Epoch  47 Batch  150/183 - Train Accuracy: 0.9876, Validation Accuracy: 0.9805, Loss: 0.0114\n",
+      "Epoch  48 Batch  150/183 - Train Accuracy: 0.9844, Validation Accuracy: 0.9822, Loss: 0.0121\n",
+      "Epoch  49 Batch  150/183 - Train Accuracy: 0.9882, Validation Accuracy: 0.9819, Loss: 0.0113\n",
+      "Epoch  50 Batch  150/183 - Train Accuracy: 0.9882, Validation Accuracy: 0.9806, Loss: 0.0110\n",
+      "Epoch  51 Batch  150/183 - Train Accuracy: 0.9877, Validation Accuracy: 0.9810, Loss: 0.0108\n",
+      "Epoch  52 Batch  150/183 - Train Accuracy: 0.9898, Validation Accuracy: 0.9799, Loss: 0.0101\n",
+      "Epoch  53 Batch  150/183 - Train Accuracy: 0.9903, Validation Accuracy: 0.9799, Loss: 0.0113\n",
+      "Epoch  54 Batch  150/183 - Train Accuracy: 0.9879, Validation Accuracy: 0.9799, Loss: 0.0094\n",
+      "Epoch  55 Batch  150/183 - Train Accuracy: 0.9904, Validation Accuracy: 0.9843, Loss: 0.0098\n",
+      "Epoch  56 Batch  150/183 - Train Accuracy: 0.9884, Validation Accuracy: 0.9789, Loss: 0.0088\n",
+      "Epoch  57 Batch  150/183 - Train Accuracy: 0.9905, Validation Accuracy: 0.9791, Loss: 0.0094\n",
+      "Epoch  58 Batch  150/183 - Train Accuracy: 0.9888, Validation Accuracy: 0.9814, Loss: 0.0091\n",
+      "Epoch  59 Batch  150/183 - Train Accuracy: 0.9923, Validation Accuracy: 0.9831, Loss: 0.0084\n",
+      "Epoch  60 Batch  150/183 - Train Accuracy: 0.9902, Validation Accuracy: 0.9788, Loss: 0.0068\n",
+      "Epoch  61 Batch  150/183 - Train Accuracy: 0.9941, Validation Accuracy: 0.9781, Loss: 0.0071\n",
+      "Epoch  62 Batch  150/183 - Train Accuracy: 0.9905, Validation Accuracy: 0.9820, Loss: 0.0085\n",
+      "Epoch  63 Batch  150/183 - Train Accuracy: 0.9922, Validation Accuracy: 0.9800, Loss: 0.0066\n",
+      "Epoch  64 Batch  150/183 - Train Accuracy: 0.9924, Validation Accuracy: 0.9833, Loss: 0.0076\n",
+      "Model Trained and Saved\n"
      ]
     }
    ],
@@ -1024,10 +1079,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -1046,10 +1099,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 55,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -1078,11 +1129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def sentence_to_seq(sentence, vocab_to_int):\n",
     "    \"\"\"\n",
@@ -1092,7 +1149,7 @@
     "    :return: List of word ids\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return [vocab_to_int[i] if i in vocab_to_int else vocab_to_int['<UNK>'] for i in sentence.split()]\n",
+    "    return [vocab_to_int[i] if i in vocab_to_int else vocab_to_int['<UNK>'] for i in sentence.lower().split()]\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -1111,14 +1168,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from checkpoints/dev\n",
+      "Input\n",
+      "  Word Ids:      [211, 189, 176, 104, 226, 9, 58, 129, 68, 168, 176, 46, 120, 106, 191]\n",
+      "  English Words: ['new', 'jersey', 'is', 'usually', 'warm', 'during', 'autumn', ',', 'and', 'it', 'is', 'snowy', 'in', 'winter', '.']\n",
+      "\n",
+      "Prediction\n",
+      "  Word Ids:      [349, 236, 294, 273, 20, 134, 175, 152, 309, 145, 285, 294, 73, 131, 268, 55, 1]\n",
+      "  French Words: new jersey est généralement chaud pendant l' automne , et il est neigeux en hiver . <EOS>\n"
+     ]
+    }
+   ],
    "source": [
     "translate_sentence = 'he saw a old yellow truck .'\n",
-    "translate_sentence = \"new jersey is sometimes warm during autumn , and it is snowy and cold in winter .\"\n",
+    "translate_sentence = \"new jersey is usually warm during autumn , and it is snowy in winter .\"\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -1167,9 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1180,6 +1248,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
