--- a/dlnd_language_translation.ipynb
+++ b/dlnd_language_translation.ipynb
@@ -14,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 138,
    "metadata": {
     "scrolled": true
    },
@@ -596,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -764,12 +755,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "epochs = 65\n",
+    "epochs = 20\n",
     "# Batch Size\n",
     "batch_size = 750\n",
     "# RNN Size\n",
@@ -777,10 +768,10 @@
     "# Number of Layers\n",
     "num_layers = 2\n",
     "# Embedding Size\n",
-    "encoding_embedding_size = 256\n",
-    "decoding_embedding_size = 256\n",
+    "encoding_embedding_size = 128\n",
+    "decoding_embedding_size = 128\n",
     "# Learning Rate\n",
-    "learning_rate = .0004\n",
+    "learning_rate = .001 \n",
     "# Dropout Keep Probability\n",
     "keep_probability = .5\n",
     "display_step = 150\n",
@@ -797,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 144,
    "metadata": {
     "scrolled": true
    },
@@ -918,71 +909,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch  150/183 - Train Accuracy: 0.5072, Validation Accuracy: 0.5165, Loss: 1.5997\n",
-      "Epoch   1 Batch  150/183 - Train Accuracy: 0.5754, Validation Accuracy: 0.5708, Loss: 0.9649\n",
-      "Epoch   2 Batch  150/183 - Train Accuracy: 0.6884, Validation Accuracy: 0.6801, Loss: 0.6355\n",
-      "Epoch   3 Batch  150/183 - Train Accuracy: 0.7682, Validation Accuracy: 0.7695, Loss: 0.4284\n",
-      "Epoch   4 Batch  150/183 - Train Accuracy: 0.8358, Validation Accuracy: 0.8456, Loss: 0.2803\n",
-      "Epoch   5 Batch  150/183 - Train Accuracy: 0.8761, Validation Accuracy: 0.8861, Loss: 0.1864\n",
-      "Epoch   6 Batch  150/183 - Train Accuracy: 0.8990, Validation Accuracy: 0.9164, Loss: 0.1402\n",
-      "Epoch   7 Batch  150/183 - Train Accuracy: 0.9125, Validation Accuracy: 0.9236, Loss: 0.1083\n",
-      "Epoch   8 Batch  150/183 - Train Accuracy: 0.9181, Validation Accuracy: 0.9339, Loss: 0.0949\n",
-      "Epoch   9 Batch  150/183 - Train Accuracy: 0.9255, Validation Accuracy: 0.9397, Loss: 0.0779\n",
-      "Epoch  10 Batch  150/183 - Train Accuracy: 0.9358, Validation Accuracy: 0.9462, Loss: 0.0707\n",
-      "Epoch  11 Batch  150/183 - Train Accuracy: 0.9355, Validation Accuracy: 0.9438, Loss: 0.0627\n",
-      "Epoch  12 Batch  150/183 - Train Accuracy: 0.9398, Validation Accuracy: 0.9523, Loss: 0.0573\n",
-      "Epoch  13 Batch  150/183 - Train Accuracy: 0.9460, Validation Accuracy: 0.9536, Loss: 0.0508\n",
-      "Epoch  14 Batch  150/183 - Train Accuracy: 0.9454, Validation Accuracy: 0.9552, Loss: 0.0474\n",
-      "Epoch  15 Batch  150/183 - Train Accuracy: 0.9507, Validation Accuracy: 0.9604, Loss: 0.0452\n",
-      "Epoch  16 Batch  150/183 - Train Accuracy: 0.9510, Validation Accuracy: 0.9595, Loss: 0.0397\n",
-      "Epoch  17 Batch  150/183 - Train Accuracy: 0.9501, Validation Accuracy: 0.9596, Loss: 0.0392\n",
-      "Epoch  18 Batch  150/183 - Train Accuracy: 0.9563, Validation Accuracy: 0.9613, Loss: 0.0335\n",
-      "Epoch  19 Batch  150/183 - Train Accuracy: 0.9551, Validation Accuracy: 0.9621, Loss: 0.0351\n",
-      "Epoch  20 Batch  150/183 - Train Accuracy: 0.9598, Validation Accuracy: 0.9738, Loss: 0.0310\n",
-      "Epoch  21 Batch  150/183 - Train Accuracy: 0.9630, Validation Accuracy: 0.9675, Loss: 0.0307\n",
-      "Epoch  22 Batch  150/183 - Train Accuracy: 0.9621, Validation Accuracy: 0.9679, Loss: 0.0289\n",
-      "Epoch  23 Batch  150/183 - Train Accuracy: 0.9645, Validation Accuracy: 0.9690, Loss: 0.0287\n",
-      "Epoch  24 Batch  150/183 - Train Accuracy: 0.9645, Validation Accuracy: 0.9721, Loss: 0.0283\n",
-      "Epoch  25 Batch  150/183 - Train Accuracy: 0.9670, Validation Accuracy: 0.9696, Loss: 0.0247\n",
-      "Epoch  26 Batch  150/183 - Train Accuracy: 0.9702, Validation Accuracy: 0.9693, Loss: 0.0246\n",
-      "Epoch  27 Batch  150/183 - Train Accuracy: 0.9708, Validation Accuracy: 0.9740, Loss: 0.0251\n",
-      "Epoch  28 Batch  150/183 - Train Accuracy: 0.9672, Validation Accuracy: 0.9770, Loss: 0.0237\n",
-      "Epoch  29 Batch  150/183 - Train Accuracy: 0.9701, Validation Accuracy: 0.9736, Loss: 0.0201\n",
-      "Epoch  30 Batch  150/183 - Train Accuracy: 0.9730, Validation Accuracy: 0.9765, Loss: 0.0190\n",
-      "Epoch  31 Batch  150/183 - Train Accuracy: 0.9730, Validation Accuracy: 0.9760, Loss: 0.0207\n",
-      "Epoch  32 Batch  150/183 - Train Accuracy: 0.9750, Validation Accuracy: 0.9712, Loss: 0.0174\n",
-      "Epoch  33 Batch  150/183 - Train Accuracy: 0.9763, Validation Accuracy: 0.9778, Loss: 0.0186\n",
-      "Epoch  34 Batch  150/183 - Train Accuracy: 0.9779, Validation Accuracy: 0.9780, Loss: 0.0174\n",
-      "Epoch  35 Batch  150/183 - Train Accuracy: 0.9765, Validation Accuracy: 0.9755, Loss: 0.0186\n",
-      "Epoch  36 Batch  150/183 - Train Accuracy: 0.9771, Validation Accuracy: 0.9827, Loss: 0.0183\n",
-      "Epoch  37 Batch  150/183 - Train Accuracy: 0.9818, Validation Accuracy: 0.9785, Loss: 0.0176\n",
-      "Epoch  38 Batch  150/183 - Train Accuracy: 0.9821, Validation Accuracy: 0.9799, Loss: 0.0157\n",
-      "Epoch  39 Batch  150/183 - Train Accuracy: 0.9804, Validation Accuracy: 0.9775, Loss: 0.0153\n",
-      "Epoch  40 Batch  150/183 - Train Accuracy: 0.9864, Validation Accuracy: 0.9813, Loss: 0.0150\n",
-      "Epoch  41 Batch  150/183 - Train Accuracy: 0.9788, Validation Accuracy: 0.9795, Loss: 0.0158\n",
-      "Epoch  42 Batch  150/183 - Train Accuracy: 0.9833, Validation Accuracy: 0.9853, Loss: 0.0139\n",
-      "Epoch  43 Batch  150/183 - Train Accuracy: 0.9858, Validation Accuracy: 0.9823, Loss: 0.0131\n",
-      "Epoch  44 Batch  150/183 - Train Accuracy: 0.9830, Validation Accuracy: 0.9805, Loss: 0.0124\n",
-      "Epoch  45 Batch  150/183 - Train Accuracy: 0.9858, Validation Accuracy: 0.9792, Loss: 0.0113\n",
-      "Epoch  46 Batch  150/183 - Train Accuracy: 0.9843, Validation Accuracy: 0.9798, Loss: 0.0132\n",
-      "Epoch  47 Batch  150/183 - Train Accuracy: 0.9876, Validation Accuracy: 0.9805, Loss: 0.0114\n",
-      "Epoch  48 Batch  150/183 - Train Accuracy: 0.9844, Validation Accuracy: 0.9822, Loss: 0.0121\n",
-      "Epoch  49 Batch  150/183 - Train Accuracy: 0.9882, Validation Accuracy: 0.9819, Loss: 0.0113\n",
-      "Epoch  50 Batch  150/183 - Train Accuracy: 0.9882, Validation Accuracy: 0.9806, Loss: 0.0110\n",
-      "Epoch  51 Batch  150/183 - Train Accuracy: 0.9877, Validation Accuracy: 0.9810, Loss: 0.0108\n",
-      "Epoch  52 Batch  150/183 - Train Accuracy: 0.9898, Validation Accuracy: 0.9799, Loss: 0.0101\n",
-      "Epoch  53 Batch  150/183 - Train Accuracy: 0.9903, Validation Accuracy: 0.9799, Loss: 0.0113\n",
-      "Epoch  54 Batch  150/183 - Train Accuracy: 0.9879, Validation Accuracy: 0.9799, Loss: 0.0094\n",
-      "Epoch  55 Batch  150/183 - Train Accuracy: 0.9904, Validation Accuracy: 0.9843, Loss: 0.0098\n",
-      "Epoch  56 Batch  150/183 - Train Accuracy: 0.9884, Validation Accuracy: 0.9789, Loss: 0.0088\n",
-      "Epoch  57 Batch  150/183 - Train Accuracy: 0.9905, Validation Accuracy: 0.9791, Loss: 0.0094\n",
-      "Epoch  58 Batch  150/183 - Train Accuracy: 0.9888, Validation Accuracy: 0.9814, Loss: 0.0091\n",
-      "Epoch  59 Batch  150/183 - Train Accuracy: 0.9923, Validation Accuracy: 0.9831, Loss: 0.0084\n",
-      "Epoch  60 Batch  150/183 - Train Accuracy: 0.9902, Validation Accuracy: 0.9788, Loss: 0.0068\n",
-      "Epoch  61 Batch  150/183 - Train Accuracy: 0.9941, Validation Accuracy: 0.9781, Loss: 0.0071\n",
-      "Epoch  62 Batch  150/183 - Train Accuracy: 0.9905, Validation Accuracy: 0.9820, Loss: 0.0085\n",
-      "Epoch  63 Batch  150/183 - Train Accuracy: 0.9922, Validation Accuracy: 0.9800, Loss: 0.0066\n",
-      "Epoch  64 Batch  150/183 - Train Accuracy: 0.9924, Validation Accuracy: 0.9833, Loss: 0.0076\n",
+      "Epoch   0 Batch  150/183 - Train Accuracy: 0.5575, Validation Accuracy: 0.5520, Loss: 1.2141\n",
+      "Epoch   1 Batch  150/183 - Train Accuracy: 0.6313, Validation Accuracy: 0.6178, Loss: 0.6869\n",
+      "Epoch   2 Batch  150/183 - Train Accuracy: 0.7250, Validation Accuracy: 0.7240, Loss: 0.4228\n",
+      "Epoch   3 Batch  150/183 - Train Accuracy: 0.8473, Validation Accuracy: 0.8456, Loss: 0.2427\n",
+      "Epoch   4 Batch  150/183 - Train Accuracy: 0.9041, Validation Accuracy: 0.9154, Loss: 0.1391\n",
+      "Epoch   5 Batch  150/183 - Train Accuracy: 0.9199, Validation Accuracy: 0.9322, Loss: 0.0937\n",
+      "Epoch   6 Batch  150/183 - Train Accuracy: 0.9273, Validation Accuracy: 0.9394, Loss: 0.0733\n",
+      "Epoch   7 Batch  150/183 - Train Accuracy: 0.9438, Validation Accuracy: 0.9422, Loss: 0.0595\n",
+      "Epoch   8 Batch  150/183 - Train Accuracy: 0.9397, Validation Accuracy: 0.9487, Loss: 0.0515\n",
+      "Epoch   9 Batch  150/183 - Train Accuracy: 0.9499, Validation Accuracy: 0.9547, Loss: 0.0470\n",
+      "Epoch  10 Batch  150/183 - Train Accuracy: 0.9531, Validation Accuracy: 0.9645, Loss: 0.0446\n",
+      "Epoch  11 Batch  150/183 - Train Accuracy: 0.9550, Validation Accuracy: 0.9615, Loss: 0.0369\n",
+      "Epoch  12 Batch  150/183 - Train Accuracy: 0.9557, Validation Accuracy: 0.9718, Loss: 0.0337\n",
+      "Epoch  13 Batch  150/183 - Train Accuracy: 0.9609, Validation Accuracy: 0.9704, Loss: 0.0328\n",
+      "Epoch  14 Batch  150/183 - Train Accuracy: 0.9658, Validation Accuracy: 0.9720, Loss: 0.0309\n",
+      "Epoch  15 Batch  150/183 - Train Accuracy: 0.9660, Validation Accuracy: 0.9759, Loss: 0.0265\n",
+      "Epoch  16 Batch  150/183 - Train Accuracy: 0.9693, Validation Accuracy: 0.9773, Loss: 0.0270\n",
+      "Epoch  17 Batch  150/183 - Train Accuracy: 0.9713, Validation Accuracy: 0.9788, Loss: 0.0243\n",
+      "Epoch  18 Batch  150/183 - Train Accuracy: 0.9763, Validation Accuracy: 0.9784, Loss: 0.0218\n",
+      "Epoch  19 Batch  150/183 - Train Accuracy: 0.9710, Validation Accuracy: 0.9775, Loss: 0.0213\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -1079,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1177,18 +1123,17 @@
      "text": [
       "INFO:tensorflow:Restoring parameters from checkpoints/dev\n",
       "Input\n",
-      "  Word Ids:      [211, 189, 176, 104, 226, 9, 58, 129, 68, 168, 176, 46, 120, 106, 191]\n",
-      "  English Words: ['new', 'jersey', 'is', 'usually', 'warm', 'during', 'autumn', ',', 'and', 'it', 'is', 'snowy', 'in', 'winter', '.']\n",
+      "  Word Ids:      [192, 19, 179, 170, 217, 200, 214]\n",
+      "  English Words: ['he', 'saw', 'a', 'old', 'yellow', 'truck', '.']\n",
       "\n",
       "Prediction\n",
-      "  Word Ids:      [349, 236, 294, 273, 20, 134, 175, 152, 309, 145, 285, 294, 73, 131, 268, 55, 1]\n",
-      "  French Words: new jersey est généralement chaud pendant l' automne , et il est neigeux en hiver . <EOS>\n"
+      "  Word Ids:      [231, 342, 18, 280, 71, 339, 80, 264, 1]\n",
+      "  French Words: il a vu un vieux camion jaune . <EOS>\n"
      ]
     }
    ],
    "source": [
     "translate_sentence = 'he saw a old yellow truck .'\n",
-    "translate_sentence = \"new jersey is usually warm during autumn , and it is snowy in winter .\"\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -1233,13 +1178,6 @@
     "## Submitting This Project\n",
     "When submitting this project, make sure to run all the cells before saving the notebook. Save the notebook file as \"dlnd_language_translation.ipynb\" and save it as a HTML file under \"File\" -> \"Download as\". Include the \"helper.py\" and \"problem_unittests.py\" files in your submission."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
